src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/inexistingParam.deca
// Description:
//    Déclaration d'une méthode qui a un argument de type inexistant
//
// Resultats:
//    Erreur contextuelle ligne 11
//    type non introuvable dans envTypes
class A{

    int x;

    void setX(B y){
        x = y;
    }
}
